RESOLVED FIXED307339
http/wpt/webrtc/third-party-frame-ice-candidate-filtering.html is asserting in EWS
https://bugs.webkit.org/show_bug.cgi?id=307339
Summary http/wpt/webrtc/third-party-frame-ice-candidate-filtering.html is asserting i...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-09 06:49:29 PST
youenn fablet
Comment 2 2026-02-09 06:55:20 PST
EWS
Comment 3 2026-02-17 02:07:36 PST
Committed 307698@main (1e1623417095): <https://commits.webkit.org/307698@main> Reviewed commits have been landed. Closing PR #58205 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.