http/wpt/webrtc/third-party-frame-ice-candidate-filtering.html is asserting in EWS rdar://169965571 https://bugs.webkit.org/show_bug.cgi?id=307339

Reviewed by Jean-Yves Avenard.

NetworkRTCTCPSocketCocoa::getInterfaceName block sometimes tries to resolve/reject twice the native promise.
To prevent this, we check whether the promise is already settled.
We do not change the way we cancel the connection.

Canonical link: https://commits.webkit.org/307698@main